# gruff-rs

./: .gitignore  .gruff-rs.yaml  .gruff.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  UPGRADING.md  action.yml  package-lock.json  package.json
.github/: git-commit-instructions.md
.github/workflows/: ci.yml  release.yml
.goat-flow/: architecture.md  code-map.md  config.yaml  glossary.md
.goat-flow/decisions/: ADR-001-rust-parser-source-model.md  ADR-002-rule-identity-baseline-contract.md  ADR-003-local-gate-and-config-policy.md  ADR-004-git-ignore-aware-discovery-policy.md  ADR-005-rule-selection-profiles-and-selector-precedence.md  ADR-006-report-renderers-preserve-analysis-schema.md  ADR-007-fix-safety-separate-from-severity.md  ADR-008-semantic-analysis-opt-in-no-execute.md  ADR-009-suppression-baseline-and-diff-layering.md  ADR-010-custom-rules-start-regex-only.md  ADR-011-rubric-thresholds-use-single-value-and-severity.md  ADR-012-rubric-first-remediation-policy.md  ADR-013-per-command-minimum-severity.md  ADR-014-visibility-only-rule-scoring-tier.md  ADR-015-mission-agent-code-governance.md  ADR-016-remove-npath-rubric.md  ADR-017-remove-redundant-maintainability-design-rubrics.md  ADR-018-config-ignore-authoritative-in-every-mode.md
.goat-flow/footguns/: analyzer.md  calibration.md  config.md  preflight.md  report.md
.goat-flow/lessons/: naming.md  release.md  research.md  rule-messaging.md  setup.md  verification.md
.goat-flow/patterns/: architecture.md  error-handling.md  performance.md  research-extractions.md  rule-precision.md
docs/: README.md  ci-integration.md  configuration.md  dashboard.md  mission.md  output-formats.md  releasing.md  rules.md  rust-rubric.md
docs/coding-standards/: git-commit.md
fixtures/: README.md  rubric.rs  sample.rs
scripts/: bump-version.sh  check.sh  dependency-install.sh  dependency-update.sh  preflight-checks.sh  publish-crates.sh  start-dev.sh  test-performance.sh
src/: analyse_project.rs  analysis.rs  baseline.rs  changed_region.rs  check_ignore.rs  cli.rs  command_setup.rs  config.rs  config_loader.rs  custom_rules.rs  dashboard.rs  diff.rs  discovery.rs  gate.rs  html_report.rs  ignore_policy.rs  init.rs  main.rs  parser.rs  render.rs  report.rs  rules.rs  rules_detail.rs  scoring.rs  source.rs  summary.rs
src/analyse_project/: architecture.rs  dead_code.rs  dependencies.rs  mod.rs
src/built_in_rules/: analyzers_a.rs  analyzers_b.rs  analyzers_c.rs  analyzers_d.rs  behavior_rules.rs  blocks.rs  comment_item_and_blocks.rs  concurrency_rules.rs  dead_code.rs  docs_rules.rs  function_block_metrics.rs  function_block_rules.rs  helpers.rs  mod.rs  modernisation_rules.rs  naming_rules.rs  network_security_rules.rs  path_traversal_rules.rs  perf_rules.rs  predicates.rs  rust_block_rules.rs  rust_other_rules.rs  rustdoc_parsing.rs  secret_rules.rs  test_context.rs  test_rules.rs  text_rules.rs  waste_rules.rs
src/cli/: args.rs  mod.rs
src/config_loader/: custom_rules.rs  exclusions.rs  mod.rs  rule_settings.rs  selectors.rs
src/html_report/: mod.rs  sections.rs  styles.rs
src/parser/: comments.rs  mod.rs
src/project/: items.rs  lockfile.rs  manifest.rs  mod.rs
src/render/: github.rs  hotspot.rs  markdown.rs  mod.rs  sarif.rs  text.rs
src/rules/: definitions_a.rs  definitions_b.rs  definitions_c.rs  mod.rs
src/tests/: baseline.rs  calibration_extras.rs  config.rs  custom_rules.rs  diff.rs  exclusions.rs  false_positive_guards.rs  idiomatic_handling.rs  m33_regressions.rs  m35_m37_m38_regressions.rs  mod.rs  project_model.rs  project_rules.rs  regression_milestones.rs  renderers.rs  rust_rules.rs  sarif.rs  selectors.rs  smoke.rs
src/tests/calibration/: cases_a.rs  cases_b.rs  cases_c.rs  cases_pillar_expansion.rs  documentation_error_idiom_cases.rs  mod.rs  security_size_test_waste_cases.rs  structural_project_cases.rs
src/tests/config_and_selectors/: config.rs  custom_rules.rs  exclusions.rs  gate.rs  init_command.rs  mod.rs  selectors.rs
src/tests/project_tests/: mod.rs  project_model.rs  project_rules.rs
src/tests/renderers/: dashboard.rs  mod.rs  output.rs  sarif.rs
tests/fixtures/: README.md
(+27 files in other folders)
