[package]
name = "gruff-rs"
version = "0.1.0"
edition = "2021"
description = "Rust project quality analyzer."
license = "proprietary"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
